--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mssqlserver, 1433;Initial Catalog=TaskManager;User ID=sa;Password=P@ssw0rd"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
